@@ -16,8 +16,6 @@ Programs_GtkLauncher_CFLAGS = \
 	$(global_cflags)
 
 Programs_GtkLauncher_LDADD = \
-	$(GLOBALDEPS_LIBS) \
-	$(WEBKITDEPS_LIBS) \
 	libwebkit-1.0.la
 
 Programs_GtkLauncher_LDFLAGS = -rpath $(CURDIR)/.libs
@@ -45,8 +43,6 @@ Programs_DumpRenderTree_CXXFLAGS = \
 	$(global_cflags)
 
 Programs_DumpRenderTree_LDADD = \
-	$(GLOBALDEPS_LIBS) \
-	$(WEBKITDEPS_LIBS) \
 	libwebkit-1.0.la
 
 Programs_DumpRenderTree_LDFLAGS = -rpath $(CURDIR)/.libs
