@@ -1,3 +1,11 @@
+2008-03-02  Brent Fulgham  <bfulgham@gmail.com>
+
+        Reviewed by Alp Toker.
+
+        Remove some needless LIBS.
+
+        * GNUmakefile.am:
+
 2008-03-02  Alp Toker  <alp@atoker.com>
 
         Reviewed by Mark Rowe.
