@@ -1,3 +1,13 @@
+2008-03-02  Brent Fulgham  <bfulgham@gmail.com>
+
+        Reviewed by Alp Toker.
+
+        Add ICU_CPPFLAGS earlier in include path for WebCore
+        so that we find $(icu_cppflags)/unicode/utf8.h, rather than
+        the wtf/unicode/UTF8.h on case-insensitive file systems.
+
+        * GNUmakefile.am:
+
 2008-03-02  Alp Toker  <alp@atoker.com>
 
         Reviewed by Mark Rowe.
